@@ -1,6 +1,11 @@
 # Perspective
 Percpective is a puzzle platform game made using native java and javafx without using any library or game engine.
 
+To play the game you can download the executable jar build (454MB) from this adress: https://drive.google.com/drive/folders/1HlYqaHBRlBslcvcaQN-OkEyYjVoQAsiO?usp=sharing
+Excecute PLAY.bat file to play
+or run the jar file with "java --module-path "javafx-sdk-17.0.1\lib" --add-modules javafx.controls,javafx.fxml,javafx.media -jar Perspective.jar" command
+please keep in mind that you have to hava java 17 or newer version of java installed on your system.
+
 ![Untitled0](https://user-images.githubusercontent.com/89701935/171731886-0616f0c3-3ac0-4609-9e57-d3436cd94d66.png)
 ![Untitled](https://user-images.githubusercontent.com/89701935/171731906-d64a7c8e-d541-471c-85de-a811f05ce981.png)
 ![Untitled2](https://user-images.githubusercontent.com/89701935/171731919-70aa4a91-a628-4201-8705-a15d61c59b80.png)
